--- a/Josh-Wehipeihana-Resume/api/api.csproj
+++ b/Josh-Wehipeihana-Resume/api/api.csproj
@@ -6,7 +6,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.37.1" />
     <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.CosmosDB" Version="4.5.1" />
+    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.CosmosDB" Version="4.2.0" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="4.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
@@ -18,3 +21,4 @@
     </None>
   </ItemGroup>
 </Project>
+
